# ima2p

./: IMa2p manual.docx  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
Simulations/: Sim1_300loci.u  Sim1_50loci.u  Sim1_5loci.u  Sim2.u  Sim3.u
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
m4/: ax_prog_cxx_mpi.m4
src/: Makefile.am  Makefile.in  autoc.cpp  build_gtree.cpp  build_poptree.cpp  calc_prob_data.cpp  config.h.in  freemem.cpp  ginfo.cpp  gtint.cpp  histograms.cpp  ima_main_mpi.cpp  imamp.hpp  initialize.cpp  jointfind.cpp  marglike.cpp  mcmcfile.cpp  msdirent.hpp  multi_t_bins.cpp  output.cpp  popmig.cpp  readata.cpp  readpriorfile.cpp  surface_call_functions.cpp  surface_search_functions.cpp  swapchains.cpp  treeprint.cpp  update_gtree.cpp  update_gtree.hpp  update_gtree_common.cpp  update_gtree_common.hpp  update_mc_params.cpp  update_t_NW.cpp  update_t_RY.cpp  updateassignment.cpp  updateassignment.hpp  utilities.cpp  utilities.hpp  xtrapbits.hpp
