## Process this file with automake to produce Makefile.in

#include $(top_srcdir)/PreRules.am

bin_PROGRAMS = IMa2p

IMa2p_SOURCES = autoc.cpp build_gtree.cpp build_poptree.cpp calc_prob_data.cpp freemem.cpp ginfo.cpp gtint.cpp histograms.cpp ima_main_mpi.cpp imamp.hpp initialize.cpp jointfind.cpp marglike.cpp mcmcfile.cpp  multi_t_bins.cpp output.cpp popmig.cpp readata.cpp readpriorfile.cpp surface_call_functions.cpp surface_search_functions.cpp swapchains.cpp treeprint.cpp updateassignment.cpp updateassignment.hpp update_gtree.cpp update_gtree_common.cpp update_mc_params.cpp update_t_NW.cpp update_t_RY.cpp utilities.cpp xtrapbits.hpp utilities.hpp update_gtree_common.hpp update_gtree.hpp

IMa2p_LDADD = -lm

EXTRA_DIST = msdirent.cpp msdirent.hpp
# EXTRA_DIST = msdirent.cpp msdirent.hpp winconfig.hpp IMa2-10.sln IMa2.sln IMa2.vcproj IMa2.vcxproj IMa2.vcxproj.filters IMa2.vcxproj.user
 
